# ClipboardProvider

./: .gitignore  CMakeLists.txt  README.md
src/: ClipboardProvider.cpp  ClipboardProvider.h  main.cpp
